# DRAMSys

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE.txt  NOTICE  README.md  cliff.toml  coding-style.md  pyvenv.cfg  requirements.txt  vcpkg-configuration.json  vcpkg.json
DRAMSys/: CMakeLists.txt
DRAMSys/gem5/: CMakeLists.txt  README.md  main.cpp
DRAMSys/gem5/gem5_etrace/: config.ini
DRAMSys/gem5/gem5_se/hello-ARM/: config.ini
DRAMSys/gem5/gem5_se/hello-X86/: config.ini
DRAMSys/simulator/: CMakeLists.txt  ExampleInitiator.h  LengthConverter.cpp  LengthConverter.h  MemoryManager.cpp  MemoryManager.h  StlPlayer.cpp  StlPlayer.h  TraceGenerator.cpp  TraceGenerator.h  TracePlayer.cpp  TracePlayer.h  TracePlayerListener.h  TraceSetup.cpp  TraceSetup.h  TrafficGenerator.cpp  TrafficGenerator.h  TrafficInitiator.cpp  TrafficInitiator.h  main.cpp
apps/simulator/: CMakeLists.txt  README.md  Simulator.cpp  Simulator.h  main.cpp
apps/simulator/simulator/: Simulator.cpp  Simulator.h
apps/simulator/simulator/generator/: RandomState.cpp  RandomState.h  SequentialState.cpp  SequentialState.h  TrafficGenerator.cpp  TrafficGenerator.h
apps/simulator/simulator/hammer/: RowHammer.cpp  RowHammer.h
apps/simulator/simulator/player/: StlPlayer.cpp  StlPlayer.h
apps/simulator/simulator/request/: RequestIssuer.h
apps/simulator/tests/: CMakeLists.txt  main.cpp
apps/simulator/tests/cache/: ListInitiator.cpp  ListInitiator.h  tests_cache.cpp
apps/traceAnalyzer/: CMakeLists.txt  evaluationtool.cpp  evaluationtool.h  evaluationtool.ui  main.cpp  preferences.ui  queryeditor.cpp  queryeditor.h  queryeditor.ui  resources.qrc  traceanalyzer.cpp  traceanalyzer.h  tracefiletab.cpp  tracefiletab.h  tracefiletab.ui
apps/traceAnalyzer/businessObjects/: calculatedMetric.h  commentmodel.cpp  generalinfo.h  pythoncaller.cpp  pythoncaller.h  testresult.h  timespan.cpp  timespan.h  tracecalculatedmetrics.h  traceplotlinemodel.cpp  traceplotlinemodel.h
apps/traceAnalyzer/data/: tracedb.cpp  tracedb.h
apps/traceAnalyzer/presentation/: debugmessagetreewidget.cpp  debugmessagetreewidget.h  selectedtransactiontreewidget.h  tracedrawing.cpp  tracedrawingproperties.cpp  tracemetrictreewidget.cpp  tracemetrictreewidget.h  tracenavigator.h  traceplot.h  traceplotitem.h  transactiontreewidget.cpp  transactiontreewidget.h
apps/traceAnalyzer/presentation/util/: clkgrid.cpp  colorgenerator.cpp  colorgenerator.h  colorobject.h
lib/nlohmann_json/: CMakeLists.txt
lib/sqlite3/: CMakeLists.txt
python/: pyproject.toml
python/examples/simulator/: ddr4-bw-lat.py  ddr4-example.py  ddr4-multi-example.py
python/examples/simulator/configs/: ddr4-bw-lat-ex.json  ddr4-bw-lat.json  ddr4-example.json
python/src/dramsys/simulation/: simgroup.py  simstats.py  simulator.py
src/: CMakeLists.txt
src/DRAMSys/: DRAMSys.cpp  DRAMSys.h
src/DRAMSys/common/: DebugManager.h  DramATRecorder.cpp  DramATRecorder.h  MemoryManager.cpp  Serialize.h  StandardMapping.h  TlmATRecorder.cpp  TlmATRecorder.h  TlmRecorder.cpp  TlmRecorder.h  dramExtensions.cpp  dramExtensions.h  utils.h
src/DRAMSys/components/: Cache.cpp  Cache.h
src/DRAMSys/configuration/json/: AddressMapping.h  DRAMSysConfiguration.cpp  DRAMSysConfiguration.h  McConfig.h  MemSpec.h  SimConfig.h  TraceSetup.h
src/DRAMSys/configuration/memspec/: MemSpec.cpp  MemSpec.h  MemSpecDDR3.cpp  MemSpecDDR3.h  MemSpecDDR4.cpp  MemSpecDDR4.h  MemSpecGDDR5.cpp  (+15 more)
src/DRAMSys/controller/: BankMachine.cpp  BankMachine.h  Command.cpp  Command.h  Controller.cpp  Controller.h  ManagerIF.h  McConfig.cpp  McConfig.h
src/DRAMSys/ecc/: EccScheme.h  InlineEcc.cpp  InlineEcc.h  OrinScheme.cpp  OrinScheme.h  TwoLevelScheme.cpp  TwoLevelScheme.h
src/DRAMSys/power/: DRAMPowerAdapter.cpp  DRAMPowerAdapter.h  DRAMPowerVariant.h  DRAMPowerWrapper.h
src/DRAMSys/simulation/: AddressDecoder.cpp  AddressDecoder.h  Arbiter.cpp  Arbiter.h  Dram.cpp  Dram.h  SimConfig.cpp  SimConfig.h
src/DRAMSys/statistics/: Group.cpp  Group.h  JsonFormat.cpp  JsonFormat.h  PrettyFormat.cpp  PrettyFormat.h  Stat.h  StatProvider.h
src/configuration/: CMakeLists.txt
src/libdramsys/: CMakeLists.txt  README.md
src/simulator/: CMakeLists.txt  README.md  main.cpp
src/simulator/simulator/: Cache.cpp  Cache.h  EccModule.cpp  EccModule.h  Initiator.h  MemoryManager.cpp  MemoryManager.h  SimpleInitiator.h  Simulator.cpp  Simulator.h  util.cpp  util.h
src/traceAnalyzer/: CMakeLists.txt  README.md  evaluationtool.h  evaluationtool.ui  extensionDisclaimer.h  gototimedialog.cpp  gototimedialog.h  gototimedialog.ui  main.cpp  markerplotitem.h  selectmetrics.cpp  selectmetrics.h  selectmetrics.ui  traceanalyzer.cpp  traceanalyzer.h  traceanalyzer.ui  tracefiletab.cpp  tracefiletab.h  tracefiletab.ui
src/traceAnalyzer/businessObjects/: commandlengths.h  commentmodel.h  configmodels.cpp  configmodels.h  pythoncaller.cpp  pythoncaller.h  timespan.cpp  timespan.h  tracecalculatedmetrics.h  traceplotlinemodel.cpp  tracetime.h  transaction.cpp  transaction.h
src/traceAnalyzer/data/: QueryTexts.h  tracedb.cpp  tracedb.h
src/traceAnalyzer/presentation/: selectedtransactiontreewidget.cpp  tracePlotMouseLabel.cpp  tracePlotMouseLabel.h  tracedrawing.h  tracedrawingproperties.cpp  tracedrawingproperties.h  tracenavigator.cpp  traceplot.cpp  traceplot.h  traceplotitem.cpp  tracescroller.cpp  tracescroller.h
src/util/: CMakeLists.txt
tests/: AddressDecoderConfigs.h  AddressDecoderTests.cpp  CMakeLists.txt  test_utils.cpp
tests/b_transport/: b_transport.cpp
tests/b_transport/configs/: no_storage.json  storage.json
tests/cache/: CacheInitiator.cpp  CacheInitiator.h  TargetMemory.cpp  TargetMemory.h  tests_cache.cpp
tests/configuration/: reference.json  test_configuration.cpp
tests/storage/: ListInitiator.cpp  ListInitiator.h  config.json  test_storage.cpp
tests/tests_regression/: CMakeLists.txt  ddr3-example.json  ddr4-example.json  hbm2-example.json  lpddr4-example.json
tests/util/: SystemCTest.h
(+404 files in other folders)
